photo allegées et card other workshop done

--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -82,7 +82,8 @@
 }
 .card-img {
   text-align: center;
-  position: relative;
+  // position: relative;
+  height: 200px;
 }
 .card-img-filter{
   position: absolute;
