--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -82,7 +82,10 @@
 }
 .card-img {
   text-align: center;
-  // position: relative;
+  position: relative;
+}
+.card-img-other {
+  text-align: center;
   height: 200px;
 }
 .card-img-filter{
