--- a/app/views/bookings/edit.html.erb
+++ b/app/views/bookings/edit.html.erb
@@ -95,10 +95,10 @@
       <div class="col-xs-12 col-md-6">
       <!-- photo -->
        <div class="adaptation-photo text-center" >
-         <% if @workshop.artisan_pic.blank? %>
+         <% if @workshop.photos.first.blank? %>
            <%= image_tag("http://placehold.it/600x550") %>
          <% else %>
-           <%= cl_image_tag @workshop.artisan_pic.path, width: 600, height: 600, crop: :crop %>
+           <%= cl_image_tag @workshop.photos.first.path, width: 600, height: 600, crop: :crop %>
          <% end %>
        </div>
       </div>
