banner home gradient ok

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -74,6 +74,7 @@
   max-width: 100%;
   display: block;
   position: relative;
+  background-size: 440px 300px;
 }
 .grid figcaption {
   position: absolute;
